# OmniConvertCS

./: .gitignore  0-PUBLISH.bat  0build_publish_with_assets.bat  CMakeLists.txt  CREDITS.md  OmniconvertCS.csproj  Program.cs  README.md  build-windows7-x64.cmd
.github/workflows/: build-windows7-x64.yml
Core/: Cheat.cs  Common.cs  ConvertCore.cs  InlineCryptParser.cs  Translate.cs  cheat_t.cs
Core/Cli/: CliOptions.cs  CliScreenContext.cs  CliUi.cs  E001ToDFixer.cs  RawPlausibility.cs  RawPlausibilityResult.cs  TextCheatParser.cs  TextCheatWriter.cs
Core/Cli/AutoFix/: AutoFixCryptSelector.Attempts.cs  AutoFixCryptSelector.Candidates.cs  AutoFixCryptSelector.Helpers.cs  AutoFixCryptSelector.Heuristics.cs  AutoFixCryptSelector.Manual.cs  AutoFixCryptSelector.ManualAll.cs  AutoFixCryptSelector.ManualExtras.cs  AutoFixCryptSelector.cs  AutoFixResult.cs
Core/Cli/CliRunner/: CliRunner.Execute.cs  CliRunner.Helpers.cs  CliRunner.Input.cs  CliRunner.Process.cs  CliRunner.Usage.cs  CliRunner.cs
Core/Translate/: Translate.Batch.cs  Translate.Constants.Armax.cs  Translate.Constants.Std.cs  Translate.Debug.cs  Translate.Errors.cs  Translate.Helpers.Bit.cs  Translate.Helpers.SmashExplode.cs  Translate.TransMaxToStd.cs  Translate.TransOther.cs  Translate.TransStdToMax.cs
Devices/: Ar2.cs  Armax.cs  Cb2Crypto.cs  Gs3.cs
Devices/Load/: ArmaxBinReader.cs  CbcReader.cs  P2mReader.cs
Devices/Options/: PnachCrcHelper.cs
Devices/SaveAs/: ArmaxBinWriter.cs  CbcWriter.cs  Crc32.cs  P2m.cs  PnachWriter.cs  SwapMagicBinWriter.cs
INFO/: AR2_DisplayedHeaderConsumeFix_Notes.md  AR2_InputOutputKeyDropdowns_Notes.md  AR2_OutputKeyPlacementFix_Notes.md  AR2_OutputResizeFix_Notes.md  DEV_FunctionMap.md  DEV_FunctionMap_v1.02.md  OmniConvertCS-v1.06-Help.html  OmniconvertCS_Help.html
UI/: Ar2KeyForm.Designer.cs  Ar2KeyForm.cs  ArmaxOptionsForm.Designer.cs  ArmaxOptionsForm.cs  MainForm.Designer.cs  MainForm.cs  PnachCrcForm.Designer.cs  PnachCrcForm.cs
UI/MainForm/: MainForm.Ar2Helpers.cs  MainForm.CryptMenus.cs  MainForm.Designer.cs  MainForm.DragDrop.cs  MainForm.EditMenu.cs  MainForm.FileMenu.cs  MainForm.GameIdAndPnachUi.cs  MainForm.OptionsMenu.cs  MainForm.Settings.cs  MainForm.cs
cmake/: OmniIdentity.cmake  OmniWarnings.cmake
cmake/templates/: OmniConvert.manifest.in  identity.hpp.in  identity_version.rc.in
cmake/tests/: TestAnalyzeCli.cmake  TestArmaxDiscHashCli.cmake  ValidateWin32Parity.cmake
src/analysis/: e001_fixer.cpp  e001_fixer.hpp  raw_plausibility.cpp  raw_plausibility.hpp
src/cli/: analyze_cli.cpp  analyze_cli.hpp  cli_app.cpp  cli_app.hpp  main.cpp
src/convert/: conversion_service.cpp  conversion_service.hpp
src/core/: cheat.cpp  cheat.hpp  code_format.cpp  code_format.hpp  crypt.cpp  crypt.hpp  inline_crypt.cpp  inline_crypt.hpp
src/crypto/: arcfour.cpp  arcfour.hpp
src/devices/action_replay/: ar_batch.cpp  ar_batch.hpp  ar_crypto.cpp  ar_crypto.hpp
src/devices/armax/: armax_codec.cpp  armax_codec.hpp  armax_crypto.cpp  armax_crypto.hpp  armax_disc_hash.cpp  armax_disc_hash.hpp  armax_options.cpp  armax_options.hpp  armax_tables.cpp  armax_tables.hpp
src/devices/codebreaker/: cb1_crypto.cpp  cb1_crypto.hpp  cb7_crypto.cpp  cb7_crypto.hpp  cb7_math.cpp  cb7_math.hpp  cb7_tables.cpp  cb7_tables.hpp  cb_batch.cpp  cb_batch.hpp  cb_file_crypto.cpp  cb_file_crypto.hpp  cb_file_key.inc
src/devices/gameshark/: gs3_crypto.cpp  gs3_crypto.hpp  gs3_file.cpp  gs3_file.hpp  gs3_tables.cpp  gs3_verifier.cpp  gs3_verifier.hpp
src/formats/binary/: application_formats.cpp  application_formats.hpp  armax_bin.cpp  binary_common.cpp  binary_common.hpp  cbc.cpp  p2m.cpp  swap_magic_bin.cpp
src/formats/mips/: mips_r5900_text.cpp  mips_r5900_text.hpp
src/formats/pnach/: pnach_crc.cpp  pnach_crc.hpp  pnach_parser.cpp  pnach_parser.hpp  pnach_writer.cpp  pnach_writer.hpp
src/formats/text/: copy_paste_cleaner.cpp  copy_paste_cleaner.hpp  text_cheat_parser.cpp  text_cheat_parser.hpp  text_cheat_writer.cpp  text_cheat_writer.hpp
src/gui/win32/: app_state.cpp  app_state.hpp  armax_disc_hash_dialog.cpp  armax_disc_hash_dialog.hpp  armax_options_dialog.cpp  armax_options_dialog.hpp  command_handlers.cpp  command_handlers.hpp  context_controls.cpp  context_controls.hpp  conversion_controller.cpp  conversion_controller.hpp  dialog_proc.cpp  dialog_proc.hpp  edit_commands.cpp  edit_commands.hpp  file_commands.cpp  file_commands.hpp  format_menu.cpp  format_menu.hpp  gs3_key_menu.cpp  gs3_key_menu.hpp  hex_edit.cpp  hex_edit.hpp  key_dialog.cpp  key_dialog.hpp  main.cpp  (+12 more)
src/tests/: test_action_replay.cpp  test_action_replay.hpp  test_analysis.cpp  test_analysis.hpp  test_armax.cpp  test_armax.hpp  test_armax_disc_hash.cpp  test_armax_disc_hash.hpp  test_armax_translation.cpp  test_armax_translation.hpp  test_binary_formats.cpp  test_binary_formats.hpp  test_cb_gs_translation.cpp  test_cb_gs_translation.hpp  test_cmp_output_mode.cpp  test_cmp_output_mode.hpp  test_codebreaker.cpp  test_codebreaker.hpp  test_copy_paste_cleanup.cpp  test_copy_paste_cleanup.hpp  test_core.cpp  test_core.hpp  test_format_aliases.cpp  test_format_aliases.hpp  test_gameshark.cpp  test_gameshark.hpp  test_inline_mode.cpp  test_inline_mode.hpp  test_main.cpp  test_mips_r5900.cpp  test_mips_r5900.hpp  test_options.cpp  test_options.hpp  test_pnach.cpp  test_pnach.hpp  test_pnach_crc.cpp  test_pnach_crc.hpp  test_support.hpp  test_translation.cpp  test_translation.hpp  (+4 more)
src/translate/: armax_conditions.cpp  armax_conditions.hpp  armax_to_standard.cpp  cb_gs_semantics.cpp  cb_gs_semantics.hpp  original_armax_to_standard.cpp  original_standard_to_armax.cpp  original_standard_to_standard.cpp  original_translation_helpers.cpp  original_translation_helpers.hpp  standard_to_armax.cpp  standard_to_standard.cpp  translation_error.cpp  translation_error.hpp  translation_helpers.cpp  translation_internal.hpp  translator.cpp  translator.hpp  transpose_mode.cpp  transpose_mode.hpp
src/util/: bit_fields.hpp  hex.cpp  hex.hpp  newlines.cpp  newlines.hpp
tools/: build-windows7-x64.ps1  validate_options_menu.py
(+20 files in other folders)
